# Duplo

./: CMakeLists.txt  Dockerfile  compile.sh
src/: CMakeLists.txt
tests/: CMakeLists.txt
tests/Quake2/: tests.bats
tests/Simple/: test-xml.bats  tests.bats
